# CppGame

./: .gitignore  CMakeLists.txt
ext/freeglut/include/GL/: freeglut.h  freeglut_ext.h  freeglut_std.h  glut.h
src/: CMakeLists.txt  main.cpp  main.h
src/game/: CMakeLists.txt  player.cpp  player.h  vector.cpp  vector.h
src/render/: CMakeLists.txt  rendering_test.cpp
